chore: fix  scrollbar color

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -129,6 +129,20 @@
     --bt-button-active-hover-color: #fff;
     --bt-button-active-hover-bg: #499DFF;
 
+    // scrollbar colors
+    --bt-scrollbar-bg-light: #c0c0c012;
+    --bt-scrollbar-bg-dark: #c0c0c012;
+    --bt-scrollbar-bg: light-dark(var(--bt-scrollbar-bg-light), var(--bt-scrollbar-bg-dark));
+
+    --bt-scrollbar-thumb-light: #c0c0c07a;
+    --bt-scrollbar-thumb-dark: #1b1b1b;
+    --bt-scrollbar-thumb: light-dark(var(--bt-scrollbar-thumb-light), var(--bt-scrollbar-thumb-dark));
+
+    // acts as both hover and active
+    --bt-scrollbar-thumb-active-light: #c0c0c0FF;
+    --bt-scrollbar-thumb-active-dark: #4e4e4e;
+    --bt-scrollbar-thumb-active: light-dark(var(--bt-scrollbar-thumb-active-light), var(--bt-scrollbar-thumb-active-dark));
+
     // Font sizes
     --bt-font-size-normal: 14px;
     --bt-font-size-lg: 16px;
