--- a/src/less/row.less
+++ b/src/less/row.less
@@ -1,7 +1,6 @@
 .bt-row {
     &-header {
         background: var(--bt-header-row-bg);
-        box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
         color: var(--bt-header-row-color);
     }
 
