--- a/src/less/scrollbar.less
+++ b/src/less/scrollbar.less
@@ -1,70 +1,74 @@
 &-table {
-  &-scrollbar {
-    background: rgba(45, 45, 45, 0.05);
-    position: absolute;
-    &-active {
-      background: rgba(45, 45, 45, 0.1);
-    }
-    &-hide {
-      display: none;
-    }
-    &-handle {
-      position: absolute;
-      background: rgba(45, 45, 45, 0.5);
-      border-radius: 4px;
-    }
-    &-horizontal {
-      width: 100%;
-      height: 10px;
-      bottom: 2px;
+    &-scrollbar {
+        background: var(--bt-scrollbar-bg);
+        position: absolute;
 
-      &.fixed {
-        position: fixed;
-      }
-    }
+        &-active {
+            background: var(--bt-scrollbar-bg);
+        }
 
-    &-horizontal &-handle {
-      height: 8px;
-      left: 0px;
-      top: 1px;
-    }
+        &-hide {
+            display: none;
+        }
 
-    &-horizontal &-pressed,
-    &-horizontal:hover {
-      height: 14px;
-      box-shadow: 1px 1px 2px #ddd inset;
-    }
+        &-handle {
+            position: absolute;
+            background: var(--bt-scrollbar-thumb);
+            border-radius: 4px;
+        }
 
-    &-horizontal &-pressed &-handle,
-    &-horizontal:hover &-handle {
-      top: 2px;
-      height: 10px;
-    }
+        &-horizontal {
+            width: 100%;
+            height: 10px;
+            bottom: 2px;
 
-    &-vertical {
-      top: 0;
-      right: 0px;
-      width: 10px;
-      bottom: 2px;
-    }
+            &.fixed {
+                position: fixed;
+            }
+        }
 
-    &-vertical &-handle {
-      min-height: 20px;
-      width: 8px;
-      top: 0px;
-      left: 1px;
-    }
+        &-horizontal &-handle {
+            height: 8px;
+            left: 0px;
+            top: 1px;
+        }
 
-    &-vertical &-pressed,
-    &-vertical:hover {
-      width: 14px;
-      box-shadow: 1px 1px 2px #ddd inset;
-    }
+        &-horizontal &-pressed,
+        &-horizontal:hover {
+            height: 14px;
+        }
 
-    &-vertical &-pressed &-handle,
-    &-vertical:hover &-handle {
-      left: 2px;
-      width: 10px;
+        &-horizontal &-pressed &-handle,
+        &-horizontal:hover &-handle {
+            top: 2px;
+            height: 10px;
+            background: var(--bt-scrollbar-thumb-active);
+        }
+
+        &-vertical {
+            top: 0;
+            right: 0px;
+            width: 10px;
+            bottom: 2px;
+        }
+
+        &-vertical &-handle {
+            min-height: 20px;
+            width: 8px;
+            top: 0px;
+            left: 1px;
+        }
+
+        &-vertical &-pressed,
+        &-vertical:hover {
+            width: 14px;
+        }
+
+        &-vertical &-pressed &-handle,
+        &-vertical:hover &-handle {
+            left: 2px;
+            width: 10px;
+            background: var(--bt-scrollbar-thumb-active);
+        }
     }
-  }
 }
